1999-08-23  Herbert Valerio Riedel  <hvr@hvrlab.dhs.org>

	* gnome-procbar.[ch] (gnome_proc_bar_set_values): made val[] const

	* gtk-ted.[ch], gnome-spell.[ch], gnome-popup-help.[ch], 
	gnome-pixmap-entry.[ch], gnome-number-entry.[ch], gnome-mdi.[ch],
	gnome-mdi-generic-child.[ch], gnome-mdi-child.[ch], gnome-entry.[ch],
	gnome-icon-text.[ch], gnome-icon-entry.[ch], gnome-druid-page-start.[ch],
	gnome-druid-page-standard.[ch], gnome-druid-page-finish.[ch], 
	gnome-client.[ch]: marked some more char* args const

1999-08-22  Herbert Valerio Riedel  <hvr@hvrlab.dhs.org>

	* gnome-icon-entry.c (gnome_icon_entry_new): added missing GNOME_ENTRY
	* gnome-properties.c: added <string.h>
	* gtkpixmapmenuitem.h, gtkcauldron.h, gtkdial.h, 
	gnome-druid-page-start.h, gnome-paper-selector.h,
	gnome-druid-page-standard.h, gnome-druid.h, gnome-druid-page-finish.h, 
	gnome-druid-page.h: extern "C" replaced by ..._GNOME_DECLS
	* gnome-canvas-load.[ch], gnome-app-helper.[ch], gnome-app.[ch], 
	gtk-clock.[ch], gnome-file-entry.[ch], gnome-paper-selector.[ch]: 
	marked some char* args const
	* gnome-font-selector.c: strcmp() args casted to (char*)
	
1999-08-22  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-sel.c (gnome_icon_selection_show_icons): Check
	for destroyed or stop_loading on every iteration, instead of 
	after all events are expired; should fix bug 1883.

1999-08-22  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-entry.c (gnome_icon_entry_new): Load the entry's
	history. Doh. We maybe should have a construct() method for
	GnomeEntry. Added "keep in sync" comment. Fixes bug 1701, fix from
	Chris Gonnerman <chris.gonnerman@usa.net>

	* gnome-entry.c (gnome_entry_new): Add comment about syncing.

	* gnome-file-entry.c (gnome_file_entry_new): Add comment about
	syncing these functions.
	
1999-08-22  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-list.c (gnome_icon_list_thaw): Show the item on 
	thaw, even if the dirty flag is not set (so it works if you 